refactor(weather):重构天气数据获取逻辑天气
- 提取数据获取逻辑到独立函数
- 简化Promise.all中的天气数据请求
-优化错误处理和加载状态管理- 移除冗余的try-catch块- 改进重试按钮的异步处理逻辑

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview --host 0.0.0.0",
     "serve": "npm run build && npm run preview",
-    "type-check": "tsc --noEmit",
-    "release": "semantic-release"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -72,7 +71,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "semantic-release": "^25.0.2",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
