--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
     "next-themes": "^0.4.6",
