--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,55 +7,33 @@ on:
         paths: ["src/**"]        # 只有 src 目录变更才执行
     workflow_dispatch:         # 手动触发按钮
 
-env:
-    # 统一放一份，后面步骤直接引用，避免重复 ${{ secrets.xxx }}
-    OSS_BUCKET:   ${{ secrets.OSS_BUCKET }}
-    OSS_ENDPOINT: ${{ secrets.OSS_ENDPOINT }}
-    OSS_KEY_ID:   ${{ secrets.OSS_KEY_ID }}
-    OSS_KEY_SECRET: ${{ secrets.OSS_KEY_SECRET }}
-
 jobs:
     build:
         # 只有 PR 被合并才继续（防止 PR 关闭但未合并也跑）
         if: github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch'
-
         runs-on: ubuntu-latest
-
         steps:
             # 1. 拉代码
             - name: Checkout
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
             # 2. 装 Node + 缓存 yarn
             - name: Setup Node.js
               uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
               with:
                   node-version: 22
                   cache: yarn
-
             # 3. 装依赖
             - name: Install dependencies
               run: yarn install --frozen-lockfile
-
             # 4. 构建
             - name: Build
               run: yarn build   # 产物默认输出到 dist/
-
-            # 5. 装 ossutil（官方最新版，带版本号方便追溯）
-            - name: Install ossutil
-              run: |
-                  curl -L -o ossutil.zip https://gosspublic.alicdn.com/ossutil/v2/2.1.2/ossutil-2.1.2-linux-amd64.zip
-                  unzip -q ossutil 
-                  cd ossutil-2.1.2-linux-amd64
-                  chmod 755 ossutil
-                  mv ossutil /usr/local/bin/ && ln -s /usr/local/bin/ossutil /usr/bin/ossutil
-                  ./ossutil64 config -e ${{ env.OSS_ENDPOINT }} \
-                                    -i ${{ env.OSS_KEY_ID }} \
-                                    -k ${{ env.OSS_KEY_SECRET }} \
-
-            # 6. 上传到 OSS
-            - name: Upload to OSS
-              run: |
-                  ./ossutil64 sync dist/ oss://${{ secrets.OSS_BUCKET }}/ \
-                        --update \
-                        --delete
+            # 5. 部署到阿里云 OSS
+            -   name: upload files to OSS
+                uses: fangbinwei/aliyun-oss-website-action@v1
+                with:
+                    accessKeyId: ${{ secrets.OSS_KEY_ID }}
+                    accessKeySecret: ${{ secrets.OSS_KEY_SECRET }}
+                    bucket: ${{ secrets.OSS_BUCKET }}
+                    endpoint: ${{ secrets.OSS_ENDPOINT }}
+                    folder: "./dist"   # 本地构建产物目录
