refactor(api):重构防抖函数和图片代理逻辑
- 重新实现debounce函数，增强其稳定性和功能
- 改进getProxiedImageUrl函数，增加URL安全验证
-优化图片加载错误处理流程，防止无限重试
- 移除冗余的脚本文件和构建步骤
- 简化Dockerfile配置，提升部署效率
- 更新Vite配置，优化构建输出结构- 修复GitHub Actions工作流中的变量引用问题

--- a/.github/workflows/summarize-issues.yml
+++ b/.github/workflows/summarize-issues.yml
@@ -52,9 +52,9 @@ jobs:
 
             - name: 以AI总结内容评论
               run: |
-                  if ! gh issue comment $ISSUE_NUMBER --body '${{ steps.inference.outputs.response }}'; then
+                  if ! gh issue comment $ISSUE_NUMBER --body "$RESPONSE"; then
                     echo "Warning: Failed to add comment to issue #${{ github.event.issue.number }}" >> audit.log
-                    echo "AI response: ${{ steps.inference.outputs.response }}" >> audit.log
+                    eecho "AI response: $RESPONSE" >> audit.log
                     echo "Timestamp: $(date -u)" >> audit.log
                     # Continue with the workflow even if this step fails
                   fi
