chore: 更新项目依赖与部署配置
- 移除 Docker 相关构建文件与工作流
- 更新 GitHub Actions 中的 Node.js 版本支持至 20.x、22.x 和 24.x
- 在部署工作流中添加安全审计步骤- 更新阿里云 OSS 部署动作版本
- 修改首页标题以反映项目定位
- 添加 AGPL-3.0 开源许可证文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             # 1. 拉代码
+            - name: Harden the runner (Audit all outbound calls)
+              uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+              with:
+                  egress-policy: audit
             - name: Checkout
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
             # 2. 装 Node + 缓存 yarn
@@ -30,7 +34,7 @@ jobs:
               run: yarn build   # 产物默认输出到 dist/
             # 5. 部署到阿里云 OSS
             -   name: upload files to OSS
-                uses: fangbinwei/aliyun-oss-website-action@v1
+                uses: fangbinwei/aliyun-oss-website-action@b9cc5868757aa0d42d30cd9a0df8da5169d66ff2 # v1.4.0
                 with:
                     accessKeyId: ${{ secrets.OSS_KEY_ID }}
                     accessKeySecret: ${{ secrets.OSS_KEY_SECRET }}
