--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -44,7 +44,7 @@ jobs:
                   echo "Timestamp: $(date -u)" >> audit.log
 
             - name: Upload audit log
-              uses: actions/upload-artifact@v4
+              uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
               with:
                   name: stale-audit-log
                   path: audit.log
