--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,109 +1,50 @@
 name: Node.js CI
 
 on:
-    pull_request:
-        branches:
-            - main
-        types: [closed]
-        paths:
-            - "src/**"
-    workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    types: [closed]
+    paths:
+      - "src/**"
+  workflow_dispatch:
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
-    build:
-        if: github.event.sender.type != 'Bot' ||
-            !contains(github.event.sender.login, 'bot') ||
-            !contains(github.event.sender.login, '[bot]') ||
-            !contains(github.event.sender.login, '(Bot)') ||
-            github.event.workflow_run.head_commit.author.login != github.event.sender.login ||
-            !contains(github.event.workflow_run.head_commit.author.login, 'bot') ||
-            !contains(github.event.workflow_run.head_commit.author.login, '[bot]') ||
-            !contains(github.event.workflow_run.head_commit.author.login, '(Bot)') ||
-            (github.event_name != 'pull_request' || (
-            github.event.pull_request.user.login != github.event.sender.login ||
-            !contains(github.event.pull_request.user.login, 'bot') ||
-            !contains(github.event.pull_request.user.login, '[bot]') ||
-            !contains(github.event.pull_request.user.login, '(Bot)'))) ||
-            github.event.pull_request.merged == true
-        runs-on: ubuntu-latest
+  build:
+    if: |
+      !(
+        contains(github.event.sender.login, 'bot') ||
+        contains(github.event.workflow_run.head_commit.author.login, 'bot') ||
+        (github.event_name == 'pull_request' && (
+          contains(github.event.pull_request.user.login, 'bot') ||
+          github.event.pull_request.merged == true
+        ))
+      )
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x, 22.x, 24.x]
+    steps:
+      - name: Harden the runner
+        uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+        with:
+          egress-policy: audit
 
-        strategy:
-            matrix:
-                node-version: [20.x, 22.x,24.x]
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-        steps:
-            - name: Harden the runner (Audit all outbound calls)
-              uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
-              with:
-                  egress-policy: audit
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
-            - name: Audit - Workflow started
-              run: |
-                  echo "Node.js CI workflow started for PR #${{ github.event.pull_request.number }}" >> audit.log
-                  echo "Triggered by: ${{ github.event.pull_request.user.login }}" >> audit.log
-                  echo "Commit SHA: ${{ github.sha }}" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
+      - run: npm install -g yarn
 
-            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-            - name: Audit - Code checked out
-              run: |
-                  echo "Code checked out" >> audit.log
-                  echo "Repository: ${{ github.repository }}" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
-              with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-            - name: Audit - Node.js setup completed
-              run: |
-                  echo "Node.js setup completed" >> audit.log
-                  echo "Node version: ${{ matrix.node-version }}" >> audit.log
-                  echo "Cache: npm" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
-
-            - run: npm install -g yarn
-            - name: Audit - Yarn installed
-              run: |
-                  echo "Yarn installed globally" >> audit.log
-                  echo "Yarn version: $(yarn --version)" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
-
-            - name: Install dependencies
-              run: |
-                  if ! yarn install --frozen-lockfile; then
-                    echo "Error: Failed to install dependencies" >> audit.log
-                    echo "Node version: ${{ matrix.node-version }}" >> audit.log
-                    echo "Timestamp: $(date -u)" >> audit.log
-                    exit 1
-                  fi
-            - name: Audit - Dependencies installed
-              run: |
-                  echo "Dependencies installed with frozen lockfile" >> audit.log
-                  echo "Node version: ${{ matrix.node-version }}" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
-
-            - name: Build project
-              run: |
-                  if ! yarn run build; then
-                    echo "Warning: Build failed for Node.js ${{ matrix.node-version }}" >> audit.log
-                    echo "Build output may be incomplete" >> audit.log
-                    echo "Timestamp: $(date -u)" >> audit.log
-                    # Continue with the workflow even if build fails
-                  fi
-            - name: Audit - Build completed
-              run: |
-                  echo "Build process completed" >> audit.log
-                  echo "Node version: ${{ matrix.node-version }}" >> audit.log
-                  echo "Timestamp: $(date -u)" >> audit.log
-
-            - name: Upload audit log
-              uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
-              with:
-                  name: nodejs-${{ matrix.node-version }}-audit-log-${{ github.run_id }}
-                  path: audit.log
-                  retention-days: 30
+      - name: Build project
+        run: yarn run build
