--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^5.1.0",
     "glob": "^11.0.3",
     "helmet": "^8.1.0",
+    "html-to-image": "^1.11.13",
     "http-errors": "^2.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.364.0",
@@ -56,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.6",
     "recharts": "^2.12.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
