refactor(styles): 修复CSS类名拼写错误并优化布局样式

--- a/.cnb.yml
+++ b/.cnb.yml
@@ -20,7 +20,7 @@ $:
 
       - name: 安装iflow
         script:
-          npm i -g @iflow-ai/iflow-cli@latest
+          - npm i -g @iflow-ai/iflow-cli@latest
           - echo "iflow安装完成"
 
       - name: 安装Git LFS
